--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/normalize-fwd43.css" />
     <link rel="stylesheet" href="css/styles.css" />
-  </head>
+
   <body>
-    <header >
+   <header>
       <h1>welcome</h1>
+      <nav>
+        <ul class="nav_links">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Projects</a></li>
+          
+        </ul>
+      </nav>
+      <button>test</button>
+      </header>
       <a hfref="#" class="button"></a>
-    </header>
+
     <main>
       <h1>Ry Dupuis</h1>
       <p>Front-End Web Developer</p>
       </section>
 
-      <section class="projects" id="projects">
+      <section class="projects">
         <h2>My Projects</h2>
-        <figure>
+        <figure> 
           <a href="#"><img src="media/macbook-rainbow.jpeg" alt="country website"></a>
           <figcaption>Country Website</figcaption>
         </figure>
