added logo, fixed semantic structure and added grid to projects

--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
     <link rel="stylesheet" href="css/styles.css" />
 
   <body>
-   <header>
-      <h1>welcome</h1>
+    <div class="wrapper">
+   <header class="navbar">
+    <img class="logo" src="media/ry-logo-temp-2.svg" alt="R Y logo">
       <nav>
         <ul class="nav_links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Projects</a></li>
-          
         </ul>
       </nav>
-      <button>test</button>
-      </header>
-      <a hfref="#" class="button"></a>
+      </div>
+      </header> 
 
     <main>
       <h1>Ry Dupuis</h1>
       <p>Front-End Web Developer</p>
       </section>
-
+<h2>My Projects</h2>
       <section class="projects">
-        <h2>My Projects</h2>
+        
         <figure> 
           <a href="#"><img src="media/macbook-rainbow.jpeg" alt="country website"></a>
           <figcaption>Country Website</figcaption>
