added a new font from google, rounded out corners on image links.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/normalize-fwd43.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Iceland&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
   <body>
     <div class="wrapper">
@@ -24,7 +27,7 @@
     <main>
       <h1>Ry Dupuis</h1>
       <p>Front-End Web Developer</p>
-      </section>
+      
 <h2>My Projects</h2>
       <section class="projects">
         
