trying to update links to join country website and landing page porjects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section class="projects">
         
         <figure> 
-          <a href="#"><img src="media/macbook-rainbow.jpeg" alt="country website"></a>
+          <a href="country-dungeon/html/dungeon_home.html"><img src="media/macbook-rainbow.jpeg" alt="country website"></a>
           <figcaption>Country Website</figcaption>
         </figure>
         <figure>
