Finally figured out my favicon and got it to work, fixed all links after moving main page out of its folder into the main folder.

--- a/country-dungeon/html/monsters.html
+++ b/country-dungeon/html/monsters.html
@@ -6,10 +6,16 @@
     <title>Monsters</title>
     <link rel="stylesheet" href="/css/normalize-fwd43.css" />
     <link rel="stylesheet" href="/css/monsters.css" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="LevCodes" />
+<link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header class="navbar">
-      <a href="dungeon_home.html">
+      <a href="/dungeon_home.html">
         <img id="logo" src="/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
       </a>
       <ul>
