--- a/country-dungeon/dungeon_home.html
+++ b/country-dungeon/dungeon_home.html
@@ -5,17 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dungeon Home</title>
     <link rel="stylesheet" href="/css/normalize-fwd43.css" />
-    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="LevCodes" />
+<link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
-   <navbar class="navbar">
-      <a href="dungeon_home.html"
+    <navbar class="navbar">
+      <a href="/dungeon_home.html"
         ><image id="logo" src="/images/ry-logo-temp.svg"></image
       ></a>
       <ul id="list">
-        <li><a href="lore.html">Lore</a></li>
-        <li><a href="floors.html">Floors</a></li>
-        <li><a href="monsters.html">Monsters</a></li>
+        <li><a href="/html/lore.html">Lore</a></li>
+        <li><a href="/html/floors.html">Floors</a></li>
+        <li><a href="/html/monsters.html">Monsters</a></li>
       </ul>
     </navbar>
 
@@ -40,5 +46,4 @@
     </div>
     <footer><small>&copy; 1205 Dungeonium Works</small></footer>
   </body>
-  
 </html>
