--- a/country-dungeon/html/lore.html
+++ b/country-dungeon/html/lore.html
@@ -14,10 +14,16 @@
       href="https://fonts.googleapis.com/css2?family=Iceland&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+   <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="shortcut icon" href="/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+<meta name="apple-mobile-web-app-title" content="LevCodes" />
+<link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header class="navbar">
-    <a href="dungeon_home.html">
+    <a href="/dungeon_home.html">
         <img id="logo" src="/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
     </a>
     <nav>
