fixed broken file paths across all pages. hopefully done.

--- a/country-dungeon/dungeon_home.html
+++ b/country-dungeon/dungeon_home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dungeon Home</title>
     <link rel="stylesheet" href="/css/normalize-fwd43.css" />
-    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/country-dungeon/css/home.css" />
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -16,12 +16,12 @@
   <body>
     <navbar class="navbar">
       <a href="/dungeon_home.html"
-        ><image id="logo" src="/images/ry-logo-temp.svg"></image
+        ><image id="logo" src="/country-dungeon/images/ry-logo-temp.svg"></image
       ></a>
       <ul id="list">
-        <li><a href="/html/lore.html">Lore</a></li>
-        <li><a href="/html/floors.html">Floors</a></li>
-        <li><a href="/html/monsters.html">Monsters</a></li>
+        <li><a href="/country-dungeon/html/lore.html">Lore</a></li>
+        <li><a href="/country-dungeon/html/floors.html">Floors</a></li>
+        <li><a href="/country-dungeon/html/monsters.html">Monsters</a></li>
       </ul>
     </navbar>
 
@@ -36,7 +36,7 @@
         bottom of a cliff face with a dragon skull as the features 
         of the entrance"
     >
-      <source src="/videos/dungeon-entrance-optimized.mp4" />
+      <source src="/country-dungeon/videos/dungeon-entrance-optimized.mp4" />
     </video>
 
     <div class="content">
