--- a/country-dungeon/html/floors.html
+++ b/country-dungeon/html/floors.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Floors</title>
     <link rel="stylesheet" href="/css/normalize-fwd43.css"/>
-    <link rel="stylesheet" href="/css/floors.css"/>
+    <link rel="stylesheet" href="/country-dungeon/css/floors.css"/>
+
    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -15,13 +16,13 @@
   </head>
   <body>
     <header class="navbar">
-      <a href="/dungeon_home.html">
-        <img id="logo" src="/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
+      <a href="/country-dungeon/dungeon_home.html">
+        <img id="logo" src="/country-dungeon/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
       </a>
       <ul>
-        <li><a href="lore.html">Lore</a></li>
-        <li><a href="floors.html">Floors</a></li>
-        <li><a href="monsters.html">Monsters</a></li>
+       <li><a href="/country-dungeon/html/lore.html">Lore</a></li>
+        <li><a href="/country-dungeon/html/floors.html">Floors</a></li>
+        <li><a href="/country-dungeon/html/monsters.html">Monsters</a></li>
       </ul>
     </header>
 
