--- a/country-dungeon/html/lore.html
+++ b/country-dungeon/html/lore.html
@@ -6,7 +6,7 @@
     <title>Dungeon Lore</title>
 
     <link rel="stylesheet" href="/css/normalize-fwd43.css" />
-    <link rel="stylesheet" href="/css/lore.css" />
+    <link rel="stylesheet" href="/country-dungeon/css/lore.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,14 +23,14 @@
   </head>
   <body>
     <header class="navbar">
-    <a href="/dungeon_home.html">
-        <img id="logo" src="/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
+    <a href="/country-dungeon/dungeon_home.html">
+        <img id="logo" src="/country-dungeon/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
     </a>
     <nav>
         <ul>
-            <li><a href="lore.html">Lore</a></li>
-            <li><a href="floors.html">Floors</a></li>
-            <li><a href="monsters.html">Monsters</a></li>
+        <li><a href="/country-dungeon/html/lore.html">Lore</a></li>
+        <li><a href="/country-dungeon/html/floors.html">Floors</a></li>
+        <li><a href="/country-dungeon/html/monsters.html">Monsters</a></li>
         </ul>
     </nav>
 </header>
