fixed links for a clean flow through country website and landing page

--- a/country-dungeon/dungeon_home.html
+++ b/country-dungeon/dungeon_home.html
@@ -15,13 +15,14 @@
   </head>
   <body>
     <navbar class="navbar">
-      <a href="/dungeon_home.html"
+      <a href="/index.html"
         ><image id="logo" src="/country-dungeon/images/ry-logo-temp.svg"></image
       ></a>
       <ul id="list">
         <li><a href="/country-dungeon/html/lore.html">Lore</a></li>
         <li><a href="/country-dungeon/html/floors.html">Floors</a></li>
         <li><a href="/country-dungeon/html/monsters.html">Monsters</a></li>
+        <li><a href="/country-dungeon/dungeon_home.html">Home</a></li>
       </ul>
     </navbar>
 
