--- a/country-dungeon/html/monsters.html
+++ b/country-dungeon/html/monsters.html
@@ -15,13 +15,14 @@
   </head>
   <body>
     <header class="navbar">
-      <a href="/country-dungeon/dungeon_home.html">
+      <a href="/index.html">
         <img id="logo" src="/country-dungeon/images/ry-logo-temp.svg" alt="Dungeon Logo - Return to Home" />
       </a>
       <ul>
         <li><a href="/country-dungeon/html/lore.html">Lore</a></li>
         <li><a href="/country-dungeon/html/floors.html">Floors</a></li>
         <li><a href="/country-dungeon/html/monsters.html">Monsters</a></li>
+        <li><a href="/country-dungeon/dungeon_home.html">Home</a></li>
       </ul>
     </header>
 
